<resources>
    <string name="app_name">Barter Buddy</string>
    <string name="posted_by">Posted by\ </string>
    <string name="description">Description</string>
    <string name="offer_trade">Offer Trade</string>
    <string name="title">Title</string>
    <string name="take_photo">Take Photo</string>
    <string name="pick_from_your_photos">Pick from your photos</string>
    <string name="choose_a_photo_for_your_item">Choose a photo for your item</string>
    <string name="username">username</string>
    <string name="email">email</string>
    <string name="welcome_message">Welcome to BarterBuddy!</string>
    <string name="password">password</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="create">Create</string>
    <string name="show_password">Show password</string>
    <string name="already_have_an_account">Already have an account?\ </string>
    <string name="create_account">Create Account</string>
    <string name="item_details">Item Details</string>
    <string name="save">Save</string>
    <string name="incoming_offers">Incoming Offers</string>
    <string name="your_items">Your Items</string>
    <string name="your_offers">Your Offers</string>
    <string name="invalid_email_or_password">Invalid email or password</string>
    <string name="don_t_have_an_account">Don\'t have an account?\ </string>
    <string name="sign_up">Sign up</string>
    <string name="back_arrow">back_arrow</string>
    <string name="write_message_here">Write message here</string>
    <string name="send_message">Send Message</string>
    <string name="empty_message">Empty Message</string>
    <string name="item_you_are_trading">Item you are trading</string>
    <string name="public_offers">Public Offers</string>
    <string name="my_items">My Items</string>
    <string name="add_item">Add Item</string>
    <string name="set_active">Set Active</string>
    <string name="logo">logo</string>
    <string name="profile_picture">Profile picture</string>
    <string name="_0_00">$0.00</string>
    <string name="down_arrow">down arrow</string>
    <string name="your_trade_with">"Your trade with "</string>
    <string name="money">money</string>
    <string name="money_wanted">0.00</string>
    <string name="money_offered">0.00</string>
    <string name="confirm">Confirm</string>
    <string name="deny">Deny</string>
    <string name="complete_trade">Complete Trade</string>
    <string name="cancel_trade">Cancel Trade</string>
    <string name="value">Value</string>
    <string name="missing_value">Missing value</string>
    <string name="missing_description">Missing description</string>
    <string name="missing_title">Missing title</string>
    <string name="missing_image">Missing image</string>
    <string name="estimated_value">"Estimated value: "</string>
    <string name="descriptionForRecyclerCards">Description:\ </string>
    <string name="questionmark">\?</string>
    <string name="rating_prompt_part1">Rate your trading experience with</string>
    <string name="rating_prompt_part2">"with\ "</string>
    <string name="market">Market</string>
    <string name="menu_items">Items</string>
    <string name="offers">Offers</string>
    <string name="add_new_item">Add New Item</string>
    <string name="offer_trade_choose_an_item">Offer Trade: Choose an Item</string>
    <string name="add_an_item">Add an Item</string>
    <string name="barter">Barter!</string>
    <string name="pick_an_item_to_offer">Pick an item to offer</string>
    <string name="you_are_offering">You are offering:</string>
    <string name="username_is_already_taken">Username is already taken</string>
    <string name="an_account_with_this_email_already_exists">An account with this email already exists</string>
    <string name="you_hope_to_receive">You hope to receive:</string>
    <string name="submit">Submit</string>
    <string name="skip">Skip</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="username_profile">Username:\ </string>
    <string name="email_profile">Email:\ </string>
    <string name="rating_profile">Rating:\ </string>
    <string name="your_offer">Your Offer</string>
    <string name="there_offer">There Offer</string>
    <string name="your_item">Your Item</string>
    <string name="their_item">Their Item</string>
    <string name="notReviewedYet">The poster has not yet\nreviewed this offer.</string>
    <string name="cancel_offer">Cancel Offer</string>
    <string name="send_countoffer">Send Counteroffer</string>
    <string name="counter_offers_left">Counter Offers Left:</string>
    <string name="they_want">They want:</string>
    <string name="they_have_offered">They have offered:</string>
    <string name="zero_dollar_hint">$0.00</string>
    <string name="lock_in">✔ Lock In!</string>
    <string name="withdraw">✘ Withdraw</string>
</resources>