<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".activities.LoginPage">

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="50dp"
        android:contentDescription="@string/logo"
        android:src="@drawable/barterbuddy" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:theme="@style/titleTextStyle" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="2dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:theme="@style/editTextStyle" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="2dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:theme="@style/editTextStyle" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="48dp"
            android:gravity="end"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/invalidUsernameOrPasswordWarning"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/invalid_email_or_password"
                android:theme="@style/warningTextStyle"
                android:visibility="gone" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/show_password"
                android:theme="@style/defaultTextStyle" />

            <CheckBox
                android:id="@+id/show_password_checkbox"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginStart="4dp"
                android:checked="false" />

        </LinearLayout>

        <Button
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:text="@string/login"
            android:theme="@style/largerTextButtonStyle"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/don_t_have_an_account"
                android:theme="@style/defaultTextStyle" />

            <TextView
                android:id="@+id/sign_up_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_up"
                android:theme="@style/usernameTextStyle" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>