<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".activities.AddNewItemPage">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/back_arrow"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:contentDescription="@string/back_arrow"
            android:src="@drawable/baseline_keyboard_double_arrow_left_24" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="12dp"
            android:text="@string/item_details"
            android:textSize="26sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/item_image_view"
                    android:layout_width="match_parent"
                    android:layout_height="350dp"
                    android:layout_weight="0"
                    android:background="@color/light_grey"
                    android:scaleType="center"
                    android:src="@drawable/baseline_add_photo_alternate_24"
                    app:shapeAppearanceOverlay="@style/roundimageview" />

                <TextView
                    android:id="@+id/missingImage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/missing_image"
                    android:textColor="@color/red"
                    android:textSize="14sp"
                    android:visibility="gone" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/title"
                        android:inputType="textCapSentences"
                        android:textSize="18sp" />

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/missingTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/missing_title"
                    android:textColor="@color/red"
                    android:textSize="14sp"
                    android:visibility="gone" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/estimatedValue"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/value"
                        android:inputType="numberDecimal"
                        android:textSize="18sp" />

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/missingValue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/missing_value"
                    android:textColor="@color/red"
                    android:textSize="14sp"
                    android:visibility="gone" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:minHeight="100dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/description"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="top|start"
                        android:hint="@string/description"
                        android:inputType="textCapSentences|textAutoComplete|textAutoCorrect|textMultiLine"
                        android:textSize="18sp" />

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/missingDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/missing_description"
                    android:textColor="@color/red"
                    android:textSize="14sp"
                    android:visibility="gone" />

                <Button
                    android:id="@+id/save_new_item_button"
                    android:layout_width="185dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:padding="12dp"
                    android:text="@string/save"
                    android:textSize="20sp" />

            </LinearLayout>

        </ScrollView>

    </LinearLayout>

</LinearLayout>