<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context=".GetImageDialogBox"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_margin="12dp"
    android:background="@drawable/custom_dialogue_box">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_a_photo_for_your_item"
        android:textStyle="bold"
        android:textSize="26sp"
        android:layout_marginBottom="12dp"
        android:textAlignment="center"/>

    <Button
        android:id="@+id/take_photo_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/take_photo"
        android:layout_marginBottom="12dp"
        android:textSize="20sp"
        android:padding="12dp"/>

    <Button
        android:id="@+id/choose_photo_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pick_from_your_photos"
        android:textSize="20sp"
        android:padding="12dp"/>


</LinearLayout>