<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    app:cardCornerRadius="20dp"
    app:cardElevation="4dp"
    tools:context=".activities.RateUserPage">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="1dp"
            android:gravity="center"
            android:text="@string/rating_prompt_part1"
            android:theme="@style/titleTextStyle"/>

        <TextView
            android:id="@+id/username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:gravity="center"
            android:maxWidth="200dp"
            android:text="@string/username"
            android:textColor="@color/peach"
            android:theme="@style/usernameTextStyle"
            android:textSize="26sp"/>

        <RatingBar
            android:id="@+id/ratingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:stepSize="1"
            android:theme="@style/RatingBar" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/submitButton"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="12dp"
                android:text="@string/submit"
                android:theme="@style/smallerTextButtonStyle"/>

            <Button
                android:id="@+id/skipButton"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="12dp"
                android:text="@string/skip"
                android:theme="@style/smallerTextButtonStyle"/>

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>