<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".activities.CreateAccountPage">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/back_arrow"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:contentDescription="back_arrow"
            android:src="@drawable/baseline_keyboard_double_arrow_left_24" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:layout_marginBottom="108dp"
        android:text="@string/create_account"
        android:theme="@style/titleTextStyle" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/username_text_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username"
                android:inputType="textCapSentences|text"
                android:theme="@style/editTextStyle" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/username_warning"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Username is already taken"
                android:theme="@style/warningTextStyle"
                android:visibility="gone" />

        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="2dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email_text_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:theme="@style/editTextStyle" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/email_warning"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="An account with this email already exists"
                android:theme="@style/warningTextStyle"
                android:visibility="gone" />

        </LinearLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="2dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_text_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:theme="@style/editTextStyle" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="48dp"
            android:gravity="end"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/show_password"
                android:theme="@style/defaultTextStyle" />

            <CheckBox
                android:id="@+id/show_password_checkbox"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginStart="4dp"
                android:checked="false" />

        </LinearLayout>

        <Button
            android:id="@+id/create_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:text="@string/create"
            android:theme="@style/primaryButtonStyle" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/already_have_an_account"
                android:theme="@style/defaultTextStyle" />

            <TextView
                android:id="@+id/login_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:theme="@style/usernameTextStyle" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>