<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingHorizontal="16dp"
    android:paddingTop="10dp"
    android:paddingBottom="16dp"
    tools:context=".activities.PersonalItemsDetailPage">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/back_arrow"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:contentDescription="@string/back_arrow"
            android:src="@drawable/baseline_keyboard_double_arrow_left_24" />

    </LinearLayout>

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/item_image_view"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:layout_marginBottom="12dp"
        android:layout_weight="0"
        android:adjustViewBounds="true"
        android:background="@color/light_gray"
        android:scaleType="centerCrop"
        app:shapeAppearanceOverlay="@style/roundimageview" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="top"
        android:orientation="vertical">

        <TextView
            android:id="@+id/item_title_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:text="@string/title"
            android:theme="@style/titleTextStyle" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/estimated_value"
                android:theme="@style/defaultBoldedTextStyle" />

            <TextView
                android:id="@+id/perceivedValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/estimated_value"
                android:theme="@style/defaultTextStyle" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:text="@string/description"
            android:theme="@style/defaultBoldedTextStyle" />

        <TextView
            android:id="@+id/description_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text=""
            android:theme="@style/defaultTextStyle" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <Button
            android:id="@+id/offer_trade_button"
            android:layout_width="185dp"
            android:layout_height="wrap_content"
            android:text="@string/set_active"
            android:theme="@style/largerTextButtonStyle" />

    </LinearLayout>

</LinearLayout>